k8s-iac-production/v3/networking.k8s.io.Ingress.affiliate.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/proxy-body-size: 128m
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Access-Control-Allow-Origin: $http_origin";
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-headers: X-CSRF-Token, Access-Control-Allow-Headers,
      Origin,Accept, X-Requested-With, Content-Type, Access-Control-Request-Method,
      Authorization, Access-Control-Request-Headers
    nginx.ingress.kubernetes.io/cors-allow-methods: PUT, GET, POST, OPTIONS, DELETE,
      PATH
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/whitelist-source-range: 35.153.24.63/32, 10.0.0.0/8,
      172.16.0.0/12, 192.168.0.0/16
  name: affiliate
  namespace: v3
spec:
  ingressClassName: ingress-nginx-public
  rules:
  - host: affiliate.afilio.com.br
    http:
      paths:
      - backend:
          service:
            name: affiliate-service
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - affiliate.afilio.com.br
    secretName: wildcard-v2
